--- a/BookstoreRepository/BookstoreRepository.csproj
+++ b/BookstoreRepository/BookstoreRepository.csproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Experimental.System.Messaging" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.15.0" />
     <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.88" />
   </ItemGroup>
